angle visualization, new tool, url parameters

--- a/Assets/WebGLTemplates/NoteCAD/index.html
+++ b/Assets/WebGLTemplates/NoteCAD/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | %UNITY_WEB_NAME%</title>
+    <title>NoteCAD 3D Modelling tool</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>
